--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,13 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>KaitekiFrontend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>KAITEKI</title>
+    <meta
+      name="description"
+      content="Elevate your teamwork with seamless organization, efficient communication, and intuitive task management in one platform"
+    />
+    <meta
+      name="keywords"
+      content="Kaiteki, Teamwork, Task Manager, Collaboration, Communication, Organization, Efficiency, Productivity"
+    />
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
