--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,7 +12,7 @@
       content="Kaiteki, Teamwork, Task Manager, Collaboration, Communication, Organization, Efficiency, Productivity"
     />
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
