--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,10 +4,6 @@
 		<meta charset="utf-8" />
 		<title>KAITEKI</title>
 		<meta
-			name="description"
-			content="Elevate your teamwork with seamless organization, efficient communication, and intuitive task management in one platform"
-		/>
-		<meta
 			name="keywords"
 			content="Kaiteki, Teamwork, Task Manager, Collaboration, Communication, Organization, Efficiency, Productivity"
 		/>
@@ -29,6 +25,10 @@
 			rel="preconnect"
 			href="https://fonts.gstatic.com"
 			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+			rel="stylesheet"
 		/>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
