--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,21 +2,75 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>KAITEKI</title>
-		<meta
-			name="keywords"
-			content="Kaiteki, Teamwork, Task Manager, Collaboration, Communication, Organization, Efficiency, Productivity"
-		/>
+		<title>Kaiteki</title>
 		<base href="/" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1, maximum-scale=1"
 		/>
+
+		<!-- Primary Meta Tags -->
+		<meta
+			name="title"
+			content="Kaiteki"
+		/>
+		<meta
+			name="description"
+			content="The web platform to enhance workflow management with integrated services and Artificial Inelegance assistance."
+		/>
+		<meta
+			name="keywords"
+			content="Kaiteki, Teamwork, Task Manager, Collaboration, Communication, Organization, Efficiency, Productivity"
+		/>
+
+		<!-- Favicons -->
 		<link
 			rel="icon"
 			type="image/x-icon"
 			href="favicon.ico"
 		/>
+
+		<!-- Open Graph / Facebook -->
+		<meta
+			property="og:type"
+			content="website"
+		/>
+		<meta
+			property="og:url"
+			content="https://kaiteki.vercel.app/"
+		/>
+		<meta
+			property="og:title"
+			content="Kaiteki"
+		/>
+		<meta
+			property="og:description"
+			content="The web platform to enhance workflow management with integrated services and Artificial Inelegance assistance."
+		/>
+		<!-- <meta
+			property="og:image"
+			content="https://angular.dev/assets/images/ng-image.jpg"
+		/> -->
+
+		<!-- Twitter -->
+		<meta
+			property="twitter:card"
+			content="summary_large_image"
+		/>
+		<meta
+			property="twitter:url"
+			content="https://kaiteki.vercel.app/"
+		/>
+		<meta
+			property="twitter:title"
+			content="Kaiteki"
+		/>
+		<meta
+			property="twitter:description"
+			content="The web platform to enhance workflow management with integrated services and Artificial Inelegance assistance."
+		/>
+
+		<!-- Fonts -->
 		<link
 			rel="preconnect"
 			href="https://fonts.googleapis.com"
@@ -27,15 +81,7 @@
 			crossorigin
 		/>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
-			rel="stylesheet"
-		/>
-		<link
 			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
 			rel="stylesheet"
 		/>
 		<link
